Tue Apr 28 19:09:45 2009  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/test_timeout.rb (TestTimeout#test_timeout): add a test.

Tue Apr 28 07:13:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/pp.rb (Struct#pretty_print): coerce to a string since
	  anonymous class has name no longer.  [ruby-dev:38349]

Mon Apr 27 16:47:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ruby_version): uses sed instead of grep if the
	  result is need, to get rid of GREP_OPTIONS.  [ruby-dev:38336]

Mon Apr 27 01:25:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/readline.c (readline_getc): use rl_getc_function if
	  possible, to get rid of hang up at EOF without a newline.

Sun Apr 26 23:19:32 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/utf8_mac.trans: Add converter for UTF8-MAC.

	* enc/trans/utf8_mac-tbl.rb: ditto.

	* test/ruby/test_econv.rb: tests for above.

Sun Apr 26 22:17:02 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/transcode-tb (ActionMap#each_firstbyte):
	  if :asis collides other mappings, use another.

	* tool/transcode-tb (ActionMap#generate_info):
	  add :asis for ASIS.

Sun Apr 26 21:59:43 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* transcode.c (ASIS): added for multi byte direct map.

	* transcode.c (transcode_restartable0): ditto.

Sun Apr 26 20:33:12 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/transcode-tb (ActionMap#generate_node):
	  Use ActionMap#gennode instead of generate_node
	  because of initialization.

Sun Apr 26 20:21:39 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* .gitignore: added.

Sun Apr 26 20:17:24 2009  Tanaka Akira  <akr@fsij.org>

	* lib/rake.rb: use RbConfig::CONFIG instead of Config::CONFIG.

	* lib/rbconfig/datadir.rb: ditto.

Sun Apr 26 19:30:29 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (time_arg): unused variable removed.

Sun Apr 26 18:35:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_reopen): keeps pathv for prep_stdio.  [ruby-dev:38131]
